--- a/lab2/index.html
+++ b/lab2/index.html
@@ -4,7 +4,10 @@
 <head>
     <title> BIKE WPI </title>
 </head>
-<link rel="stylesheet" type="text/css" href="style.css"/>
+<link rel="stylesheet" type="text/css" href="style.css" media="screen and (orientation:portrait)"/>
+ 
+<link rel="stylesheet" type="text/css" href="landscape.css" media="screen and (orientation:landscape)"/>
+
 <meta name="viewport" content="width=device-width, user-scalable=no" />
 <body>
     <!-- HTML5 article tag for content -->
