--- a/lab2/index.html
+++ b/lab2/index.html
@@ -28,9 +28,10 @@
    <nav id="main_nav">
       <ul>
          <!-- LI stands for list item -->
-         <li><a href="stores.html">Bike Stores </a></li>
+         <li><a href="Buttons.html">Bike Stores </a></li>
          <li><a href="maps.html">Bike Maps </a></li>
          <li><a href="ride.html">Go for a Ride</a></li>
+         
       </ul>
    </nav>
 
