--- a/Simulations/Assimilation.html
+++ b/Simulations/Assimilation.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang='en'>
 <head>
+    <title>Graphical Simulation - "Assimilation"</title>
+    <meta property="og:image" content="../Settlement.jpg"/>
     <style>body{ margin:0; background:black; }</style>
 </head>
 <body>
