Update for thumbnail

--- a/Simulations/Assimilation.html
+++ b/Simulations/Assimilation.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
     <title>Graphical Simulation - "Assimilation"</title>
-    <meta property="og:image" content="../Settlement.jpg"/>
+    <meta property="og:image" content="Settlement.JPG" />
     <style>body{ margin:0; background:black; }</style>
 </head>
 <body>
