--- a/Simulations/Assimilation.html
+++ b/Simulations/Assimilation.html
@@ -2,8 +2,8 @@
 <html lang='en'>
 <head>
     <title>Graphical Simulation - "Assimilation"</title>
-    <meta property="og:image" content="https://kslokhandwala2022.github.io/Simulations/Settlement.JPG" />
-    <link rel="https://kslokhandwala2022.github.io/Simulations/Settlement.JPG" href="https://kslokhandwala2022.github.io/Simulations/Settlement.JPG" />
+    <meta property="og:image" content="Settlement.JPG" />
+    <link rel="image_src" href="Settlement.JPG" />
     <style>body{ margin:0; background:black; }</style>
 </head>
 <body>
